Ensure text remains visible during webfont load

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -3,6 +3,7 @@ body,
 html {
 	width: 100%;
 	height: 100%;
+	font-display: swap;
 }
 
 // Typography
